--- a/py-app1/template/catalog-info.yaml
+++ b/py-app1/template/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ${{values.app_name}}
   description: Python app that displays time named ${{values.app_name}}
   annotations:
-    github.com/project-slug: aumthakkar/${{values.app_name}}
+    github.com/project-slug: aum-thakkar/${{values.app_name}}
 
 spec:
   type: service
