--- a/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -45,7 +45,7 @@ jobs:
         run: |
           echo ${{ '${{ needs.ci.outputs.commit_id }}' }}
           pip install yq
-          yq -Yi '.image.tag = "${{'${{needs.ci.outputs.commit_id}}' }}"' charts/${{values.app_name}}.yaml
+          yq -Yi '.image.tag = "${{'${{needs.ci.outputs.commit_id}}' }}"' charts/${{values.app_name}}/values.yaml
 
       - 
         name: Commit the change
