quoted the repo name in the argocd app create command in the workflow file

--- a/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -81,7 +81,7 @@ jobs:
           --revision main \
           --sync-option CreateNamespace=true \
           --sync-policy manual \
-          --repo https://github.com/aum-thakkar/${{values.app_name}}.git \
+          --repo "https://github.com/aum-thakkar/${{values.app_name}}.git" \
           --path charts/${{values.app_name}} \
           --values values.yaml
       
