--- a/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -74,6 +74,10 @@ jobs:
       - name: ArgoCD App create
         shell: bash
         run: |
+          # Connects the argocd repo
+          repo="https://github.com/ricardoandre-97/${{values.app_name}}.git"
+          argocd repo list | grep -q $repo || argocd repo add $repo
+
           argocd app get ${{values.app_name}} || argocd app create ${{values.app_name}} \
           --dest-namespace ${{values.app_name}} \
           --dest-server https://kubernetes.default.svc \
@@ -81,7 +85,7 @@ jobs:
           --revision main \
           --sync-option CreateNamespace=true \
           --sync-policy manual \
-          --repo "https://github.com/aum-thakkar/${{values.app_name}}.git" \
+          --repo ${repo} \
           --path charts/${{values.app_name}} \
           --values values.yaml
       
