--- a/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -75,7 +75,7 @@ jobs:
         shell: bash
         run: |
           # Connects the argocd repo
-          repo="https://github.com/ricardoandre-97/${{values.app_name}}.git"
+          repo="https://github.com/aum-thakkar/${{values.app_name}}.git"
           argocd repo list | grep -q $repo || argocd repo add $repo
 
           argocd app get ${{values.app_name}} || argocd app create ${{values.app_name}} \
