modified the workflow file, k8s objects file and added README

--- a/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -1,10 +1,16 @@
 name: ${{values.app_name}}-cicd
 on:
   push:
+    branches:
+      - main
     paths:
       - src/**
+  pull_request:
     branches:
-      - main     
+      - main
+    paths:
+      - src/**
+  workflow_dispatch:
 
 jobs:
   ci:
@@ -92,7 +98,7 @@ jobs:
         shell: bash
         run: | 
           argocd app sync ${{values.app_name}}
-          argocd app wait ${{values.app_name}} --timeout 60
+          argocd app wait ${{values.app_name}} --timeout 120
 
       
     
