--- a/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -57,7 +57,7 @@ jobs:
         name: Commit the change
         uses: EndBug/add-and-commit@v9
         with:
-          message: 'Updates charts/${{values.app_name}}/${{values.app_env}} with latest docker image push commit ${{ '${{needs.ci.outputs.commit_id}}' }}'
+          message: "Updates charts/${{values.app_name}}/${{values.app_env}} with latest docker image push commit ${{ '${{needs.ci.outputs.commit_id}}' }}"
 
       - 
         name: Install ArgoCD application on the runner
