updated the deployment to use the right image

--- a/py-app1/template/k8s/k8s-app.yaml
+++ b/py-app1/template/k8s/k8s-app.yaml
@@ -16,7 +16,7 @@ spec:
         app: backstage
     spec:
       containers:
-      - image: aumthakkar/backstage:v1
+      - image: aumthakkar/backstage_production:v1
         name: backstage
         ports:
         - containerPort: 7007
