changed the values-postgres.yaml file, k8s app deployment & README

--- a/py-app1/template/k8s/values-postgres.yaml
+++ b/py-app1/template/k8s/values-postgres.yaml
@@ -1,9 +1,9 @@
 global:
   postgresql:
     auth:
-      postgresPassword: "<your_postgres_password>"
-      username: "<your_postgres_username>"
-      password: "<your_postgres_user_password>"
+      postgresPassword: "backstage"
+      username: "backstage"
+      password: "backstage"
       database: "backstage"
 
 
