--- a/py-app1/template/k8s/k8s-app.yaml
+++ b/py-app1/template/k8s/k8s-app.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -24,15 +25,15 @@ spec:
         - name: POSTGRES_HOST
           value: psql-postgresql
         - name: POSTGRES_USER
-          value: <your_postgres_username>
+          value: backstage
         - name: POSTGRES_PASSWORD
-          value: <your_postgres_user_password>
+          value: backstage
         - name: AUTH_GITHUB_CLIENT_ID
-          value: <your_auth_github_client_id>
+          value: <your_github_oauth_client_id>
         - name: AUTH_GITHUB_CLIENT_SECRET
-          value: <your_auth_github_client_secret>
+          value: <your_github_oauth_client_secret>
         - name: GITHUB_TOKEN
-          value: <your_github_token> 
+          value: <your_github_token>
         - name: APP_CONFIG_app_baseUrl
           value: https://backstage.test.com
         - name: APP_CONFIG_backend_baseUrl
