--- a/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -16,17 +16,20 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Shorten github commit_id
-        shell: bash
-        run: |
-          echo "COMMIT_ID=${GITHUB_SHA::6}" >> ${GITHUB_ENV}
+      -
+        name: Checkout Source Code
+        uses: actions/checkout@v4
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ '${{ secrets.DOCKERHUB_USERNAME }}' }}
-          password: ${{ '${{ secrets.DOCKERHUB_TOKEN }}' }} 
+          password: ${{ '${{ secrets.DOCKERHUB_TOKEN }}' }}
+      -
+        name: Shorten github commit_id
+        shell: bash
+        run: |
+          echo "COMMIT_ID=${GITHUB_SHA::6}" >> ${GITHUB_ENV}
       -
         name: Build and push
         uses: docker/build-push-action@v6
