--- a/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -34,6 +34,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: aumthakkar/${{values.app_name}}-${{values.app_env}}:${{ '${{ env.COMMIT_ID }}' }}
     
