check to ensure argocd app is deleted first before re-creating it again

--- a/py-app1/template/charts/${{values.app_name}}/values.yaml
+++ b/py-app1/template/charts/${{values.app_name}}/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: aumthakkar/${{values.app_name}}-${{values.app_env}}
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   tag: "a3472a"
 imagePullSecrets: []
 nameOverride: ""
