--- a/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/py-app1/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -17,9 +17,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Checkout Source Code
-        uses: actions/checkout@v4
-      -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -84,11 +81,23 @@ jobs:
       - name: ArgoCD App create
         shell: bash
         run: |
-          # Connects the argocd repo
+          # Connect the argocd repo.
           repo="https://github.com/aum-thakkar/${{values.app_name}}.git"
           argocd repo list | grep -q ${repo} || argocd repo add ${repo}
 
-          argocd app get ${{values.app_name}} || argocd app create ${{values.app_name}} \
+          # Delete argocd app first if exists to start afresh.
+          if argocd app get ${{ values.app_name }} >/dev/null 2>&1; then
+                        echo "Deleting old re-iteration of ${{ values.app_name }} app first to start afresh."
+                        argocd app delete ${{ values.app_name }} --cascade --yes --wait
+
+                        while argocd app get ${{ values.app_name }} >/dev/null 2>&1; do
+                            echo "Waiting for argocd app: '${{ values.app_name }}' to be deleted..."
+                            sleep 2
+                        done
+                    fi
+          
+          # Create argocd app.
+          argocd app create ${{values.app_name}} \
           --dest-namespace ${{values.app_env}} \
           --dest-server https://kubernetes.default.svc \
           --revision main \
